# barber

./: Cargo.toml  README.md  ROADMAP.md  documentation_index.md
.github/workflows/: release.yml
src/: app.rs  edit.rs  edit_tests.rs  history.rs  keybinds.rs  main.rs  theme.rs
src/audio/: decode.rs  export.rs  levels.rs  mod.rs  peaks.rs  playback.rs  zero_crossing.rs
src/ui/: menu.rs  minimap.rs  mod.rs  toolbar.rs  waveform.rs
